# qpilot

./: Makefile  pyproject.toml
src/: main.py
